--- a/.github/workflows/cicd-main.yml
+++ b/.github/workflows/cicd-main.yml
@@ -7,3 +7,6 @@ on:
 jobs:
   reuse:
     uses: devops-learning-projects/roboshop-github-actions/.github/workflows/ci-main.yml@main
+    with:
+      app_type: nodejs
+      app_name: user
